# side-eye

./: .coveralls.yml  .dockerignore  .env.enc  .env.tmpl  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml
.gemini/: settings.json
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: hardware-research.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/automated_docker_build_20260208/: index.md  metadata.json  plan.md
conductor/archive/backlight_spi_optimization_20260210/: metadata.json
conductor/archive/button_control_20260203/: index.md  metadata.json  plan.md  spec.md
conductor/archive/catppuccin_theme_20260203/: index.md  metadata.json  plan.md
conductor/archive/ci_20260204/: plan.md  spec.md
conductor/archive/cross_compile_20260204/: metadata.json
conductor/archive/disconnected_sd_card_access_20260206/: index.md  metadata.json  spec.md
conductor/archive/docker_compose_20260208/: index.md  metadata.json  spec.md
conductor/archive/dockerize_host_agent_20260208/: index.md  metadata.json  plan.md  spec.md
conductor/archive/firmware_modularization_20260203/: index.md  spec.md
conductor/archive/firmware_versioning_20260203/: metadata.json  spec.md
conductor/archive/gpu_temp_telemetry_20260203/: metadata.json  plan.md
conductor/archive/home_assistant_mqtt_20260203/: metadata.json  spec.md
conductor/archive/host_info_display_20260203/: index.md  plan.md  spec.md
conductor/archive/host_packaging_20260203/: metadata.json  plan.md
conductor/archive/host_usb_monitoring_20260203/: plan.md  spec.md
conductor/archive/integrated_firmware_release_20260208/: index.md  metadata.json  spec.md
conductor/archive/mqtt_remote_settings_20260210/: index.md  metadata.json  plan.md  spec.md
conductor/archive/mqtt_test_20260208/: index.md  metadata.json  spec.md
conductor/archive/multi_format_config_20260203/: plan.md  spec.md
conductor/archive/network_history_20260203/: metadata.json  plan.md  (+1 more)
firmware/: HistoryBuffer.h.gcov  platformio.ini  test_history.cpp.gcov  unity.c.gcov  unity_config.c.gcov
firmware/include/: BLEPresenceManager.h  DisplayManager.h  HistoryBuffer.h  InputHandler.h  NetworkManager.h  SyncManager.h  catppuccin_colors.h  secrets.h.example
firmware/scripts/: flash.sh  generate_coverage.py  version_sync.py
firmware/src/: BLEPresenceManager.cpp  main.cpp
host/: Cargo.toml  side-eye.toml.example
host/assets/: 99-side-eye.rules
host/assets/Arch/: PKGBUILD
host/src/: config.rs  lib.rs  main.rs  monitor.rs  sync.rs
host/systemd/: side-eye-host.service
host/tests/: cli.rs  config.rs  monitor.rs  sync.rs  sync_protocol.rs
tests/: docker_runtime.sh  docker_scaffolding.sh  flash_script.sh  flash_script_all_in_one.sh  flash_script_args.sh  flash_script_functional.sh  flash_script_port.sh
tests/mqtt/: README.md  compose.yaml  validator.py
(+112 files in other folders)
