[package]
name = "side-eye-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
sysinfo = "0.30"
local-ip-address = "0.5"
mac_address = "1.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)
