[package]
name = "side-eye-host"
version = "0.1.1"
edition = "2021"
description = "A minimalist, USB-powered hardware monitor for Linux system telemetry."
license = "Apache-2.0"

[dependencies]
serialport = "4.2"
sysinfo = "0.30"
local-ip-address = "0.5"
mac_address = "1.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }
dotenvy = "0.15"
nvml-wrapper = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)

[package.metadata.deb]
maintainer = "nicholaswilde <ncwilde43@gmail.com>"
copyright = "2026, nicholaswilde"
license-file = ["../LICENSE", "0"]
depends = "$auto, libudev-dev"
section = "utility"
priority = "optional"
assets = [
    ["target/release/side-eye-host", "/usr/bin/side-eye-host", "755"],
    ["assets/side-eye.service", "/etc/systemd/system/side-eye.service", "644"],
    ["assets/99-side-eye.rules", "/etc/udev/rules.d/99-side-eye.rules", "644"],
]
systemd-units = {}

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/side-eye-host", dest = "/usr/bin/side-eye-host", mode = "755" },
    { source = "systemd/side-eye-host.service", dest = "/etc/systemd/system/side-eye-host.service", mode = "644" },
    { source = "assets/99-side-eye.rules", dest = "/etc/udev/rules.d/99-side-eye.rules", mode = "644" },
]
